# techclubsite

./: .gitignore  LICENSE  README.md  admin.py  app.py  authentication.py  config.py  firebase_setup.py  index.html  logSign.py  main.py  page1.py  page2.py  page3.py  profiles.py  pyproject.toml  requirements.txt  service-account-file.json
.streamlit/: config.toml  secrets.toml
forms/: contact.py
pages/: club_blog.py  coding_challenges.py  event_calendar.py  forum.py  home.py  member_directory.py  resources.py
pages/streamlit_calendar/: __init__.py
pages/streamlit_calendar/frontend/: package.json
src/: app.py
src/functions/: col.py  gui.py  lst.py  path.py  table.py
src/pages/: club_blog.py  club_voting.py  coding_challenges.py  event_calendar.py  forum.py  home.py  leaderboard.py  live_demos.py  member_directory.py  page2.py  page3.py  project_showcase.py  resources.py
streamlit_calendar/: __init__.py
streamlit_calendar/frontend/: package-lock.json
streamlit_calendar/frontend/src/components/: Calendar.tsx
